--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,24 +27,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Check RDS Status Before Starting
+      - name: Start RDS Instance
         run: |
           DB_INSTANCE_ID=${{ github.event.inputs.db_instance }}
-          
-          echo "Fetching current status of RDS instance: $DB_INSTANCE_ID..."
-          STATUS=$(aws rds describe-db-instances --db-instance-identifier "$DB_INSTANCE_ID" --query 'DBInstances[0].DBInstanceStatus' --output text)
-          echo "Current RDS Status: $STATUS"
-
-          if [[ "$STATUS" == "available" ]]; then
-            echo "RDS instance is already running. Skipping start command."
-            exit 0
-          fi
-
-          if [[ "$STATUS" == "stopped" ]] ; then
-            echo "Starting RDS instance..."
-            aws rds start-db-instance --db-instance-identifier "$DB_INSTANCE_ID"
-            exit 0
-          fi
-
-          echo "Instance cannot be started because it is in an invalid state: $STATUS"
-          exit 1
+          echo "Starting RDS instance: $DB_INSTANCE_ID..."
+          aws rds start-db-instance --db-instance-identifier "$DB_INSTANCE_ID"
